# game-sync-server

./: .env.example  .gitignore  Cargo.toml  README.md  docker-compose.yaml
frontend/: .eslintrc.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  webpack.config.ts
frontend/src/: index.html
frontend/src/app/: App.tsx  index.ts  index.tsx  router.tsx
frontend/src/app/components/Button/: button.css  button.module.css  index.tsx
frontend/src/app/components/Input/: index.tsx  input.module.css
frontend/src/app/components/NavBar/: index.tsx  navbar.module.css
frontend/src/app/components/Pagination/: index.tsx  pagination.module.css
frontend/src/app/components/PrivateRoute/: index.tsx
frontend/src/app/components/ReactPortal/: index.tsx
frontend/src/app/components/Select/: index.tsx  select.module.css
frontend/src/app/components/games/GameCard/: gamecard.module.css  index.tsx
frontend/src/app/components/games/LogoUploader/: Cropper.tsx  cropper.module.css  index.tsx  logo_uploader.module.css  utils.ts
frontend/src/app/pages/: Loading.tsx  NotFound.tsx  Panel.tsx  login.tsx
frontend/src/app/pages/panel/: Home.tsx
frontend/src/app/pages/panel/games/: Add.tsx  View.tsx  index.tsx
frontend/src/app/store/: hooks.ts  index.ts  init.ts
frontend/src/app/store/reducer/: auth.slice.ts  index.ts  users.slice.ts
frontend/src/app/styles/pages/: loading.module.css  login.module.css  not_found.module.css
frontend/src/app/styles/pages/games/: add.module.css  games.module.css  view.module.css
frontend/src/app/typings/: index.d.ts
frontend/src/app/utils/: API.ts
frontend/src/html/: index.html
migrations/: 20220705224141_user_table.up.sql  20220707131620_game_table.down.sql  20220707131620_game_table.up.sql
public/: .gitignore
src/: bootstrap.rs  db.rs  main.rs
src/app/: mod.rs  types.rs
src/app/api/: mod.rs  urls.rs
src/app/models/: game.rs  game_attachment.rs  mod.rs  user.rs
src/app/panel/: mod.rs  urls.rs  views.rs
src/app/panel/auth/: mod.rs  models.rs  url.rs  views.rs
src/app/panel/games/: mod.rs  url.rs  views.rs
src/app/panel/middlewares/: auth.rs
src/app/utils/: app_paths.rs  download.rs  errors.rs  hash.rs  mod.rs  paginator.rs
templates/: index.html
views/: index.html
