[package]
name = "saves-sync-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.13.0"
actix-web = "4.1.0"
actix-cors = "0.6"
actix-session = {version = "0.6.2", features = ["redis-rs-session"]}
actix-csrf = "0.6.0"
actix-web-validator = "3.0.0"

tokio = { version = "1.19.2", features = ["full"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"

serde = { version = "1", features = ["derive"] }
serde_with = "1"

sqlx = { version = "0.6", features = ["all-databases", "any", "runtime-tokio-rustls", "chrono", "macros" ] }
dotenv = "0.15.0"
tera = "1"
validator = { version = "0.14.0", features = ["derive"] }
argon2 = "0.4.1"
rand = { version = "0.8.5", features = ["std_rng"] }
chrono = { version = "0.4.19", default-features = false, features = ["clock", "std", "serde"] }

rand_core = { version = "0.6.3", features = ["std"] }
futures-util = "0.3"
derive_more = "0.99"