[package]
name = "saves-sync-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0"
actix-web = "4"
actix-cors = "0"
actix-session = {version = "0", features = ["redis-rs-session"]}
actix-csrf = "0"
#actix-web-validator = "4"
actix-web-validator = { git = "https://github.com/Bricklou/actix-web-validator", branch = "master" }
actix-multipart = "0"
actix-files = "0"

tokio = { version = "1", features = ["full"] }
log = { version = "0", features = ["max_level_trace", "release_max_level_warn"] }
pretty_env_logger = "0"

serde = { version = "1", features = ["derive"] }
serde_with = "2"

sqlx = { version = "0", features = ["all-databases", "any", "runtime-tokio-rustls", "chrono", "macros" ] }
dotenvy = "0.15"
tera = "1"
validator = { version = "0.16.0", features = ["derive"] }
argon2 = "0"
rand = { version = "0", features = ["std_rng"] }
chrono = { version = "0", default-features = false, features = ["clock", "std", "serde"] }

rand_core = { version = "0", features = ["std"] }
futures-util = "0"
derive_more = "0"

anyhow = "*"

uuid = { version = "*", features = ["v4"] }
imghdr = "*"